<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.eyesight.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.eyesight.ui.dashboard.ProductFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.eyesight.ui.notifications.HistoryFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.eyesight.ui.profile.CompanyProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_company_profile" />

</navigation>