<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FormActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/head_form"
    android:paddingTop="30dp">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow"
        android:src="@drawable/ic_arrow_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/title_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/self_form"
        android:textSize="34sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/inter_24pt_bold"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/desc_title_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_self_form"
        android:textSize="20sp"
        android:fontFamily="@font/inter_24pt_semibold"
        app:layout_constraintTop_toBottomOf="@id/title_form"
        app:layout_constraintStart_toStartOf="@id/title_form"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_top"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@id/desc_title_form">

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/plusjakartasans_medium"
            android:text="@string/firstname"
            android:textColor="#6C7278"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:autofillHints="name"
            android:background="@drawable/edt_fullborder"
            android:fontFamily="@font/inter_24pt_medium"
            android:hint="@string/firstname"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_first_name"
            app:layout_constraintTop_toBottomOf="@id/tv_first_name" />

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/plusjakartasans_medium"
            android:text="@string/lastname"
            android:textColor="#6C7278"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_first_name"
            app:layout_constraintStart_toStartOf="@id/edt_last_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:autofillHints="name"
            android:background="@drawable/edt_fullborder"
            android:fontFamily="@font/inter_24pt_medium"
            android:hint="@string/lastname"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/edt_first_name"
            app:layout_constraintTop_toBottomOf="@id/tv_first_name" />

        <TextView
            android:id="@+id/tv_birth_of_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_medium"
            android:text="@string/birth_of_date"
            android:textColor="#6C7278"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/edt_first_name"
            app:layout_constraintTop_toBottomOf="@id/edt_first_name" />

        <EditText
            android:id="@+id/edt_birth_of_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:autofillHints="creditCardExpirationDate"
            android:background="@drawable/edt_fullborder"
            android:drawableEnd="@drawable/baseline_calendar_month_24"
            android:fontFamily="@font/inter_24pt_medium"
            android:hint="@string/_18_03_2004"
            android:inputType="date"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_birth_of_date"
            app:layout_constraintTop_toBottomOf="@id/tv_birth_of_date" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_medium"
            android:text="@string/phone_number"
            android:textColor="#6C7278"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/edt_birth_of_date"
            app:layout_constraintTop_toBottomOf="@id/edt_birth_of_date" />

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:autofillHints="creditCardNumber"
            android:background="@drawable/edt_fullborder"
            android:fontFamily="@font/inter_24pt_medium"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_phone"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_medium"
            android:text="Nama Perusahaan"
            android:textColor="#6C7278"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/edt_phone_number"
            app:layout_constraintTop_toBottomOf="@id/edt_phone_number" />

        <EditText
            android:id="@+id/edt_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:autofillHints="name"
            android:background="@drawable/edt_fullborder"
            android:fontFamily="@font/inter_24pt_medium"
            android:hint="@string/company_name"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_company"
            app:layout_constraintTop_toBottomOf="@id/tv_company" />

        <TextView
            android:id="@+id/tv_company_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_medium"
            android:text="@string/company_address"
            android:textColor="#6C7278"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/edt_company"
            app:layout_constraintTop_toBottomOf="@id/edt_company" />

        <EditText
            android:id="@+id/edt_company_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:autofillHints="postalAddress"
            android:background="@drawable/edt_fullborder"
            android:fontFamily="@font/inter_24pt_medium"
            android:hint="@string/company_address_hint"
            android:inputType="textPostalAddress"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_company_address"
            app:layout_constraintTop_toBottomOf="@id/tv_company_address" />

        <TextView
            android:id="@+id/tv_jobdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_medium"
            android:text="Jobdesc di Perusahaan"
            android:textColor="#6C7278"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/edt_company_address"
            app:layout_constraintTop_toBottomOf="@id/edt_company_address" />

        <EditText
            android:id="@+id/edt_jobdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/edt_fullborder"
            android:fontFamily="@font/inter_24pt_medium"
            android:hint="@string/jobdesc"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_jobdesc"
            app:layout_constraintTop_toBottomOf="@id/tv_jobdesc" />

        <TextView
            android:id="@+id/option_notyet_already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_medium"
            android:text="@string/title_option_notyet_already"
            android:textColor="#6C7278"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/edt_jobdesc"
            app:layout_constraintTop_toBottomOf="@id/edt_jobdesc" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/option_notyet_already"
            app:layout_constraintStart_toStartOf="@id/option_notyet_already"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radioButtonOptionNotYet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notyet"
                android:button="@drawable/radio_button_selector"
                android:paddingStart="8dp"
                tools:ignore="RtlSymmetry"/>

            <RadioButton
                android:id="@+id/radioButtonOptionAlready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already"
                android:button="@drawable/radio_button_selector"
                android:paddingStart="8dp"
                android:layout_marginStart="16dp"
                tools:ignore="RtlSymmetry" />

        </RadioGroup>

        <TextView
            android:id="@+id/title_option_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/plusjakartasans_medium"
            android:text="Tipe Produk"
            android:textColor="#6C7278"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/radioGroup"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            android:visibility="gone"/>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/title_option_product"
            app:layout_constraintStart_toStartOf="@id/title_option_product"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/product_option_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:paddingStart="8dp"
                android:text="Produk A"
                tools:ignore="RtlSymmetry" />

            <RadioButton
                android:id="@+id/product_option_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:paddingStart="8dp"
                android:text="Produk B"
                tools:ignore="RtlSymmetry"/>

            <RadioButton
                android:id="@+id/product_option_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:paddingStart="8dp"
                android:text="Produk C"
                tools:ignore="RtlSymmetry"/>

        </RadioGroup>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/rectangle_primary"
            android:backgroundTint="@color/primary"
            android:padding="14dp"
            android:text="@string/register"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/radioGroup2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
